// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cloud Volume Backup Create form component should render the cloud volume backup create form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Backup Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      id="options"
      name="options"
    >
      <div>
        <h3>
          Options
        </h3>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="incremental_label"
            class="cds--toggle__button"
            id="incremental"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="incremental"
            id="incremental_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Incremental?
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                Off
              </span>
            </div>
          </label>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="force_label"
            class="cds--toggle__button"
            id="force"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="force"
            id="force_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Force?
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                Off
              </span>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Volume Backup Create form component when adding a new backup of cloud volume 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Backup Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      id="options"
      name="options"
    >
      <div>
        <h3>
          Options
        </h3>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="incremental_label"
            class="cds--toggle__button"
            id="incremental"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="incremental"
            id="incremental_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Incremental?
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                Off
              </span>
            </div>
          </label>
        </div>
      </div>
      <div>
        <div
          class="cds--toggle"
        >
          <button
            aria-checked="false"
            aria-labelledby="force_label"
            class="cds--toggle__button"
            id="force"
            maxlength="50"
            role="switch"
            type="button"
          />
          <label
            class="cds--toggle__label"
            for="force"
            id="force_label"
          >
            <span
              class="cds--toggle__label-text"
              dir="auto"
            >
              Force?
            </span>
            <div
              class="cds--toggle__appearance"
            >
              <div
                class="cds--toggle__switch"
              />
              <span
                aria-hidden="true"
                class="cds--toggle__text"
                dir="auto"
              >
                Off
              </span>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Volume Restore from backup form component should render the cloud volume backup restore form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="backup_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Cloud Volume Backup
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="backup_id"
              name="backup_id"
              title=""
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Volume Restore from backup form component when restoring cloud volume from backup 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="backup_id"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-5"
            >
              *
            </span>
            Cloud Volume Backup
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="backup_id"
              name="backup_id"
              title=""
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Volume Snapshot Create form component should render the cloud volume snapshot create form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            Snapshot Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Volume Snapshot Create form component when adding a new snapshot of cloud volume 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            Snapshot Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="50"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
